syntax = "proto3";
package cosmos.mint.beta;

import "gogoproto/gogo.proto";
import "cosmos/mint/beta/mint.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/mint/types";

// GenesisState - minter state
message GenesisState {
  Minter minter = 1 [
    (gogoproto.casttype) = "Minter",
    (gogoproto.nullable) = false
  ];

  Params params = 2 [
    (gogoproto.casttype) = "Params",
    (gogoproto.nullable) = false
  ];
}
