syntax = "proto3";
package ibc.client;

option go_package = "github.com/cosmos/cosmos-sdk/x/ibc/02-client/types";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

// GenesisClientState defines an identified ClientState as protobuf Any format.
message GenesisClientState {
  string client_id = 1 [
    (gogoproto.customname) = "ClientID",
    (gogoproto.moretags) = "yaml:\"client_id\""
  ];
  google.protobuf.Any client_state = 2 [(gogoproto.moretags) = "yaml:\"client_state\""];
}
